<resources>
    <string name="app_name">Track me</string>
    <string name="button_ar">عربي</string>
    <string name="textView_mode">من سيستخدم هذا التطبيق؟</string>
    <string name="radio_adult">شخص بالغ (تحكم كامل في البرنامج من أجل تتبع حركة اﻵخرين)</string>
    <string name="radio_kid">طفل (تحكم بسيط  و واجهة غير معقدة مناسبة للطفل حتى يمكن لوالديه أن يتتبعاه)</string>
    <string name="button_en">English</string>
    <string name="nameStr">الإسم</string>
    <string name="phoneStr">رقم الهاتف</string>
    <string name="passStr">ادخل كلمة المرور</string>
    <string name="conPassStr">تأكيد كلمة المرور</string>
    <string name="emailStr">الإيميل</string>
    <string name="nextStr">التالي</string>
    <string name="uploadStr">إرفع صورة</string>
    <string name="pickStr">إختر صورة</string>
    <string name="title_activity_home_map">حدد موقع منزلك</string>
    <string name="check_home_address">عنوانك الحالي هو:</string>
    <string name="home_address">موقعك الحالي هو:</string>
    <string name="home_ques">هل العلامة على الخريطة تشير لموقع منزلك؟ إن لم تكن كذلك قم بتحديد موقع منزلك من خلال الخريطة و النقر على الموقع فقط أو من خلال البحث بالعنوان ثم الضغط على زر الإدخال في لوحة المفاتيح</string>
    <string name="home_hint">أدخل العنوان او الرقم البريدي أو المدينة</string>
    <string name="away_ques">حدد موقع أنت معتاد على الذهاب إليه ( مثلاً العمل، المدرسة ...)"</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="tab_text_1">الأصدقاء</string>
    <string name="tab_text_2">أنشطتي</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="text_from">من</string>
    <string name="text_to">اختر وجهتك من القائمة</string>
    <string name="text_view_location">موقعك الحالي</string>
    <string name="edit_text_location_hint">أدخل اسم مناسب لهذا الموقع ( مثلاً : المنزل )</string>
    <string name="text_googlemap">(اضغط هنا)إذا لم يكن الموقع الذي تريد الذهاب إليه موجود في القائمة قم بالبحث عنه في خريطة جوجل </string>
    <string name="switch_undetermined">بدون تحديد جهة وصول</string>
    <string name="rename_destination_hint">أدخل اسم مناسب لهذا الموقع ( مثلاً : المدرسة/العمل/الكافتيريا )</string>
    <string name="switch_notify_all">إرسال الإشعارات للكل</string>
    <string name="button_start_trip">بدء التحرك</string>
    <string-array name="numbers">
        <item>One</item>
        <item>Two</item>
        <item>Three</item>
        <item>Four</item>
        <item>Five</item>
    </string-array>
</resources>
