<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:layoutDirection="rtl">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="36dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/white_board"
        android:elevation="10sp"
        android:layoutDirection="ltr"
        android:orientation="horizontal"
        map:layout_constraintEnd_toEndOf="parent"
        map:layout_constraintStart_toStartOf="parent"
        map:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:src="@mipmap/magnify" />

        <AutoCompleteTextView
            android:id="@+id/autocomplete_text_places"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/home_hint"
            android:imeOptions="actionSearch"
            android:inputType="text"
            android:paddingLeft="4dp"
            android:paddingTop="4dp"
            android:paddingRight="4dp"
            android:paddingBottom="4dp"
            android:textSize="14sp" />

    </LinearLayout>

    <ImageView
        android:id="@+id/image_View_gps"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:adjustViewBounds="false"
        android:elevation="10sp"
        android:scaleType="centerCrop"
        android:background="#8d8f8f"
        map:layout_constraintStart_toStartOf="parent"
        map:layout_constraintTop_toBottomOf="@+id/linearLayout"
        android:src="@mipmap/gps" />

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        map:layout_constraintEnd_toEndOf="parent"
        map:layout_constraintStart_toStartOf="parent"
        map:layout_constraintTop_toBottomOf="@+id/linearLayout"
        tools:context=".HomeMap">

    </fragment>

    <TextView
        android:id="@+id/text_view_ques"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="#FFFFFF"
        android:elevation="10sp"
        android:paddingTop="4dp"
        android:paddingLeft="4dp"
        android:paddingRight="4dp"
        android:paddingBottom="4dp"
        android:text="@string/away_ques"
        android:textSize="12sp"
        map:layout_constraintBottom_toTopOf="@id/buttonNext4"
        map:layout_constraintEnd_toEndOf="parent"
        map:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonNext4"
        style="@style/buttonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        map:layout_constraintBottom_toBottomOf="parent"
        map:layout_constraintEnd_toEndOf="parent"
        map:layout_constraintStart_toStartOf="parent"
        android:text="@string/nextStr"
        android:onClick="buttonNext4_Click"/>

</android.support.constraint.ConstraintLayout>
